23.12.23 Створення зв'язку з кнопками та перевірка роботи з БД